[package]
name = "control_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
petgraph = "0.6.4"
control_system_derive = { path = "control_system_derive" }
nalgebra = "0.32.3"


[workspace]
members = [
    "control_system_derive",
    "control_system_blocks",
    "control_system_plotter",
    "control_system_examples",
]
