[package]
name = "control_system_blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control-system = { path = ".." }
control_system_derive = { path = "../control_system_derive" }
arrayinit = "0.1.1"
anyhow = "1.0.79"
