[package]
name = "control_system_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control_system = {path = "..", features = ["blocks", "plotter"]}
rust_data_inspector = { git = "https://github.com/Hixos/rust-data-inspector" }

nalgebra = "0.32.3"
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
