[package]
name = "control_system_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control_system_derive = { path = "../control_system_derive" }
petgraph = "0.6.4"
nalgebra = "0.32.3"
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
config = "0.13.4"
toml = "0.8.8"
